# polix

./: Cargo.toml
.github/workflows/: reporter.yml  scanner.yml
app/polix/: Cargo.toml  README.md
app/polix/src/: cli.rs  controller.rs  main.rs
app/polix/src/controller/: run_interpreter_at_once.rs  run_interpreter_interactively.rs
example/: hello_polix.plx
lib/core/src/: lib.rs  polix_error_trait.rs  positive_integer.rs  source_code.rs  token.rs
lib/core/src/source_code/: line.rs  position.rs
lib/core/src/token/: raw_token.rs  token.rs  token_prepared.rs  token_type.rs  token_with_parsed_identifier.rs
lib/reporter/: Cargo.toml
lib/reporter/src/: lib.rs
lib/scanner/: Cargo.toml  README.md
lib/scanner/src/: buffer.rs  lib.rs  scanner.rs  token_generator.rs
lib/scanner/src/scanner/: buffer.rs  buffer_text_updater.rs  line_updater.rs  position_updater.rs  token_generator.rs
lib/scanner/src/scanner/token_generator/: identifier.rs
lib/scanner/src/token_generator/: identifier.rs
lib/transformer/: Cargo.toml  README.md
lib/transformer/src/: lib.rs  parser.rs  router.rs  searcher.rs  transformer.rs  transformer_error.rs
