[package]
name = "polix"
version = "0.0.1"
edition = "2021"
description = "AST Based Language Tool"
readme = "README.md"
license = "MIT"
repository = "https://github.com/shunsock/polix"
homepage = "https://github.com/shunsock/polix"
documentation = "https://docs.rs/polix"
keywords = ["cli", "interpreter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
scanner = { path = "../../lib/scanner" }

